# atelier-8bit

./: .gitignore  Chuck-8_specs-1.1.md  Chuck-8_specs-1.2.1.md  Chuck-8_specs-1.2.md  Chuck-8_specs-2.0.md  Chuck-8_specs.md  MVP_tests.md  Makefile  README.md  challenges-brouillon.json  quickstart.md  source_code_core.txt
chuck-core/: Cargo.toml  build.sh  emulator_wasm.ts
chuck-core/src/: io.rs  lib.rs  memory.rs  rom.rs  wasm_api.rs
chuck-core/src/assembler/: chuck_inc.rs  lexer.rs  mod.rs  parser.rs  pass1.rs  pass2.rs
chuck-core/src/cpu/: addressing.rs  execute.rs  mod.rs  opcodes.rs
chuck-core/tests/: illegal_opcodes_tests.rs
chuck-ide/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
chuck-ide/home/: index.html
chuck-ide/home/src/: main.js  style.css
chuck-ide/ide/: index.html  vite.config.ts  vite.env.d
chuck-ide/ide/public/: _redirects  docs.md
chuck-ide/ide/src/: main.ts
chuck-ide/learn/: README.md
chuck-ide/learn/.vuepress/: config.js
chuck-ide/public/: challenges.json  docs.md  formation.md  pong-path.json
chuck-ide/src/: main.ts
chuck-ide/src/components/: chuck-account-modal.ts  chuck-auth-gate.ts  chuck-challenge-panel.ts  chuck-challenges-list.ts  chuck-display.ts  chuck-editor.ts  chuck-email-gate.ts  chuck-foundations-celebration.ts  chuck-help-modal.ts  chuck-learn-modal.ts  chuck-main-modal.ts  chuck-memory-dump.ts  chuck-onboarding-tour.ts  chuck-pong-celebration.ts  chuck-pong-track.ts  chuck-public-profile.ts  chuck-registers.ts  chuck-side-panel.ts  chuck-toolbar.ts  chuck-track-paywall.ts  chuck-track-roadmap.ts  chuck-welcome-modal.ts  (+1 more)
ck1801-core/: Cargo.toml  README.md  build.rs
ck1801-core/data/: gen_opcodes.py  opcodes.tsv
ck1801-core/src/: alu.rs  cpu.rs  io.rs  isa.rs  lib.rs  memory.rs  sys.rs  wasm.rs
ck1801-core/src/asm/: lexer.rs  mod.rs
ck1801-core/tests/: alu_flags.rs  assembler.rs  coverage.rs  execution.rs  hardening.rs  interrupts.rs  io_devices.rs  sys_api.rs
examples/: illegals_opcodes.Asm  pong.asm  print_char.asm  print_str.asm
(+105 files in other folders)
