[package]
name    = "chuck-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde        = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3.102"
console_error_panic_hook = { version = "0.1", optional = true }


[dev-dependencies]
# Tests unitaires uniquement — pas de WASM nécessaire

[profile.release]
opt-level = "z"     # taille minimale pour WASM
lto       = true
panic     = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
