[package]
name = "ck1801-core"
version = "0.1.0"
edition = "2021"
description = "Cœur émulateur de l'ISA CK-1801 (Chuck-8). Implémentation normative v2.0.1-FINAL."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# La cible WASM est optionnelle : le cœur compile et se teste en natif sans elle.
# Activez `wasm` pour le binding wasm-bindgen (build wasm32, toolchain ≥ 1.77).
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
# Les "property tests" du cœur sont des balayages exhaustifs (256×256), plus forts
# qu'un échantillonnage. Pas de dépendance externe requise.

[build-dependencies]